# aether

./: .gitignore  .ovft.toml  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  release.yml
crates/aether-cli/: Cargo.toml
crates/aether-cli/src/: main.rs
docs/requirements/: architecture.md  audit.md  design.md  ovft-requirements.md  tests.md
src/: App.css  App.test.tsx  App.tsx  styles.css  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: command_history.rs  history.rs  layout_test.rs  main.rs  profiles.rs  profiles_test.rs  remote_edit.rs  settings.rs  sftp.rs  sftp_test.rs  ssh.rs  ssh_test.rs  terminal.rs  terminal_test.rs
src-tauri/tests/: integration_test.rs
src/components/: ConnectionModal.test.tsx  ConnectionModal.tsx  FileBrowser.test.tsx  FileBrowser.tsx  SettingsModal.test.tsx  SettingsModal.tsx  Sidebar.test.tsx  Sidebar.tsx  TerminalPanel.test.tsx  TerminalPanel.tsx
src/test/: setup.ts
src/test/mocks/: tauri.ts
