[package]
name = "aether"
version = "0.1.0"
description = "Aether Remote Terminal"
authors = ["Aether Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.80"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
tauri = { version = "2.5", features = [] }
tauri-plugin-shell = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-clipboard-manager = "2.2"
tauri-plugin-stronghold = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
dirs = "6"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
russh = "0.50.0-beta.7"
russh-keys = "0.50.0-beta.7"
russh-sftp = "2.3.0"
tauri-plugin-drag = "2.1.1"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
